--- a/public/styles/problem.css
+++ b/public/styles/problem.css
@@ -26,7 +26,6 @@ aside {
   gap: 8px;
 }
 
-.code-results {
   ul {
     list-style: none;
     display: grid;
@@ -48,7 +47,10 @@ aside {
         user-select: none;
       }
 
-      span {
+      button {
+        border-radius: 0 !important;
+      }
+      button, span {
         width: fit-content;
         background-color: var(--background);
         border-radius: 4px;
@@ -64,7 +66,6 @@ aside {
         }
       }
     }
-  }
 }
 
 @media (max-width: 768px) {
