feat: enhance login form with validation, error feedback, and IP tracking

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -37,10 +37,12 @@
 
             }
         }
+
         form input {
             border: none;
             padding: 0;
         }
+
         .boot-sequence {
             position: fixed;
             inset: 0;
@@ -58,6 +60,7 @@
                 animation-delay: calc(50ms * var(--delay, 0));
                 animation-fill-mode: forwards;
             }
+
             span:last-child {
                 font-weight: bold;
                 animation-iteration-count: 3;
@@ -73,6 +76,7 @@
                 opacity: 1;
             }
         }
+
         form input {
             border-width: 2px;
             padding-block: 8px;
@@ -80,40 +84,50 @@
     </style>
 </head>
 
-<body x-data="{logs: [], username: '', password: '', setUsername(event) {this.username = event.target.value;  setTimeout(() => {document.querySelector('#password').focus();}, 0) }}">
+<body x-data="{logs: [], username: '', password: '', ip: '174.127.0.234', invalidPassword: false, setUsername(event) {this.username = event.target.value;  setTimeout(() => {document.querySelector('#password').focus();}, 10) }}">
 
 <div class="boot-sequence" x-show="logs.length > 0">
     <template x-for="(log, index) of logs">
-        <span x-text="log" :style="{'--delay': index}" ></span>
+        <span x-text="log" :style="{'--delay': index}"></span>
     </template>
 </div>
 
 
-  <form>
-      <div style="display: flex; align-items: center;gap:8px">
-          <p>Rage Against Christmas</p>
-          <p>v1.3</p>
-      </div>
-        <div>
-            <label for="username">Username:</label>
-            <input type="text" id="username" autocomplete="username" autofocus required @blur="setUsername($event)" @keydown.enter="setUsername($event)"/>
-        </div>
-        <div x-show="username">
-            <label for="password">Password:</label>
-            <input type="password" id="password" autocomplete="current-password" @keydown.enter="login" x-model="password"/>
-        </div>
-        <button type="button" @click="login" style="padding: 4px 8px;" x-show="password">
-            <span>Login</span>
-        </button>
-  </form>
+<form>
+    <div style="display: flex; align-items: center;gap:8px">
+        <p>Rage Against Christmas</p>
+        <p>v1.4</p>
+    </div>
+    <div>
+        <label for="username">Username:</label>
+        <input type="text" id="username" autocomplete="username" autofocus required @blur="setUsername($event);"
+               @keydown.enter="setUsername($event)"/>
+        <div aria-hidden="true" :tabindex="username ? -1 : 0"></div>
+    </div>
+    <div x-show="username">
+        <label for="password">Password:</label>
+        <input type="password" id="password" autocomplete="current-password" @keydown.enter="login" x-model="password" required/>
+    </div>
+    <p x-show="invalidPassword" x-text="`Failed username for ${username} from ${ip} port 80`">
+
+    </p>
+    <!--        <button type="button" @click="login" style="padding: 4px 8px;" x-show="password">-->
+    <!--            <span>Login</span>-->
+    <!--        </button>-->
+</form>
 
 <script>
-  function login() {
-    const username = document.getElementById('username').value;
-    const password = document.getElementById('password').value;
+    var isLogin = false;
+    async function login() {
+        if(isLogin) return;
+        const username = document.getElementById('username').value;
+        const password = document.getElementById('password').value;
+        this.invalidPassword = false;
+        const {ip} = await (fetch('https://api.ipify.org?format=json').then(res => res.json()));
+        this.ip = ip;
         ajax('/api/login', {
             method: 'POST',
-            body: JSON.stringify({ username, password })
+            body: JSON.stringify({username, password})
         }).then(res => res.json())
                 .then(data => {
                     if (data.accessToken) {
@@ -122,69 +136,74 @@
                         localStorage.setItem('userName', data.userName);
                         this.logs = bootSequence(data.userName);
                     } else {
-                        console.log('failed');
+                        this.invalidPassword = true;
+                        this.password = '';
+                        this.username = '';
+                        document.querySelector('#username').focus();
                     }
-                });
-  }
+                }).finally(() => {
+                    isLogin = false;
+        });
+    }
 
-  function bootSequence(name = 'pepe') {
-      const logs = [
-          'Starting HTTP 2.0 Protocol Handshake',
-          'Sent SYN',
-          'Received ACK',
-          'Requested website access',
-          `SUCCESS: Authorized access detected. Welcome, ${name}`,
-          '[SYSTEM] Redirecting to login page',
-          'Receiving stream 0%',
-          'Receiving stream 3%',
-          'Receiving stream 6%',
-          'Receiving stream 7%',
-          'Receiving stream 9%',
-          'Receiving stream 14%',
-          'Receiving stream 21%',
-          'Receiving stream 34%',
-          'Receiving stream 45%',
-          'Receiving stream 51%',
-          'Receiving stream 58%',
-          'Receiving stream 61%',
-          'Receiving stream 69% (hehe)',
-          'Receiving stream 72%',
-          'Receiving stream 84%',
-          'Receiving stream 95%',
-          'Receiving stream 96%',
-          'Receiving stream 97%',
-          'Receiving stream 98%',
-          'Receiving stream 99%',
-          'Receiving stream 100%',
-          'Receiving stream 105%',
-          'Receiving stream 110% -- wait.',
-          'Stream received.',
-          'Rendering bounding borders',
-          'Drawing boxes',
-          'Centering divs',
-          'Writing forms',
-          'Sending letters to Santa Claus',
-          'Requesting a raise',
-          'Initializing asteroids',
-          'Inferring types',
-          'Setting any to all unkown types',
-          'Breaking Demeter',
-          'Asteroids initialized',
-          'Launching exploration starship',
-          'Cursor disabled',
-          'Have fun out there',
-          'Welcome to christmas!',
-      ];
-      setTimeout(() => {
-          document.querySelector('.boot-sequence span:last-child').addEventListener('animationend', (e) => {
-              setTimeout(() => {
-                  window.location.href = '/';
-              }, 300)
-          });
-      }, 0)
+    function bootSequence(name = 'pepe') {
+        const logs = [
+            'Starting HTTP 2.0 Protocol Handshake',
+            'Sent SYN',
+            'Received ACK',
+            'Requested website access',
+            `SUCCESS: Authorized access detected. Welcome, ${name}`,
+            '[SYSTEM] Redirecting to login page',
+            'Receiving stream 0%',
+            'Receiving stream 3%',
+            'Receiving stream 6%',
+            'Receiving stream 7%',
+            'Receiving stream 9%',
+            'Receiving stream 14%',
+            'Receiving stream 21%',
+            'Receiving stream 34%',
+            'Receiving stream 45%',
+            'Receiving stream 51%',
+            'Receiving stream 58%',
+            'Receiving stream 61%',
+            'Receiving stream 69% (hehe)',
+            'Receiving stream 72%',
+            'Receiving stream 84%',
+            'Receiving stream 95%',
+            'Receiving stream 96%',
+            'Receiving stream 97%',
+            'Receiving stream 98%',
+            'Receiving stream 99%',
+            'Receiving stream 100%',
+            'Receiving stream 105%',
+            'Receiving stream 110% -- wait.',
+            'Stream received.',
+            'Rendering bounding borders',
+            'Drawing boxes',
+            'Centering divs',
+            'Writing forms',
+            'Sending letters to Santa Claus',
+            'Requesting a raise',
+            'Initializing asteroids',
+            'Inferring types',
+            'Setting any to all unkown types',
+            'Breaking Demeter',
+            'Asteroids initialized',
+            'Launching exploration starship',
+            'Cursor disabled',
+            'Have fun out there',
+            'Welcome to christmas!',
+        ];
+        setTimeout(() => {
+            document.querySelector('.boot-sequence span:last-child').addEventListener('animationend', (e) => {
+                setTimeout(() => {
+                    window.location.href = '/';
+                }, 300)
+            });
+        }, 0)
 
-      return logs;
-  }
+        return logs;
+    }
 
 </script>
 </body>
