--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -134,7 +134,7 @@
           'Received ACK',
           'Requested website access',
           `SUCCESS: Authorized access detected. Welcome, ${name}`,
-          '[SYSTEM] Redirecting to login page',
+          '[SYSTEM] Redirecting to homepage',
           'Receiving stream 0%',
           'Receiving stream 3%',
           'Receiving stream 6%',
