--- a/views/problem.handlebars
+++ b/views/problem.handlebars
@@ -110,9 +110,9 @@
         </aside>
 
     </div>
-    <script src="https://www.unpkg.com/ace-builds@latest/src-noconflict/ace.js"></script>
-    <script src="https://www.unpkg.com/ace-builds@latest/src-noconflict/ext-language_tools.js"></script>
-    <script src="https://www.unpkg.com/ace-linters@latest/build/ace-linters.js"></script>
+    <script src="/scripts/ace.js"></script>
+    <script src="/scripts/ext-language_tools.js"></script>
+    <script src="/scripts/ace-linters.js"></script>
     <script>
         function loadEditor(submissions) {
             ace.require("ace/ext/language_tools"); //To allow autocompletion
