--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -41,7 +41,6 @@ a {
   display: block;
   text-decoration: none;
   user-select: none;
-
 }
 
 button {
@@ -54,7 +53,6 @@ button {
 
 button,
 a {
-
   cursor: pointer;
 
   &:focus {
@@ -98,7 +96,6 @@ textarea {
   }
 }
 
-/* Change the white to any color */
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
@@ -134,6 +131,10 @@ input:-webkit-autofill:active {
 .stack {
   display: grid;
   gap: 4px;
+}
+
+pre, code {
+    font-size: 15px;
 }
 
 @media (max-width: 768px) {
