--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,7 +14,7 @@
   <div class="stack" style="width: fit-content;">
       {{#each problems}}
         <a href="{{concat '/problems/' this.id}}"
-           style="display: flex;"
+           style="display: flex; gap: 8px"
         x-data="{ isFastestSubmission: false, hasAnsweredCorrectly: false }"
         x-init="
         ajax(`/api/problem/{{this.id}}/submissions/${getUserId()}/fastest`)
@@ -25,7 +25,7 @@
         .then(res => res.ok ? res.json() : false).then(d => hasAnsweredCorrectly = Boolean(d));"
         >
           <span>
-            {{concat this.id '.'}}
+            {{concat this.id '. '}}
           </span>
           <span style="display: inline-flex; align-items: center; gap: 4px; flex: 1">
             <span style="flex-grow: 1;margin-inline-end: 8px">{{this.title}}</span>
