--- a/views/problem.handlebars
+++ b/views/problem.handlebars
@@ -5,6 +5,7 @@
 
     <div id="main">
         <div id="description">
+            <h1>{{problem.id}}. {{problem.title}}</h1>
             {{{problem.content}}}
         </div>
 
