--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -104,6 +104,29 @@ input:-webkit-autofill:active {
     -webkit-text-fill-color: var(--foreground) !important;
 }
 
+.section-title {
+    margin-block: 0 16px;
+    padding: 8px 16px;
+    font-size: 22px;
+    font-weight: 600;
+    border: 1px solid;
+    width: fit-content;
+    position: relative;
+    background: var(--background);
+
+    &::after {
+        content: '';
+        position: absolute;
+        top: 8px;
+        left: 16px;
+        width: 100%;
+        height: 100%;
+        background: radial-gradient(circle at center, var(--foreground) 0.6px, transparent 0) round;
+        background-size: 4px 4px;
+        z-index: -1;
+    }
+}
+
 .navbar {
     position: sticky;
     top: 0px;
