--- a/views/problem.handlebars
+++ b/views/problem.handlebars
@@ -5,7 +5,7 @@
 
     <div id="main">
         <div id="description">
-            <h1>{{problem.id}}. {{problem.title}}</h1>
+            <p class="section-title">{{problem.id}}. {{problem.title}}</p>
             <span><i>{{problem.description}}</i></span>
             <div style="margin-block-start: 8px; border-top: 1px solid">
                 {{{problem.content}}}
