--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -17,8 +17,8 @@
 
 html,
 body {
-    color: var(--foreground);
     font-family: 'BerkeleyMono', 'Courier New', Courier, monospace;
+    color: var(--foreground);
     height: 100%;
     width: 100%;
     margin: 0;
@@ -34,11 +34,6 @@ html {
 ::selection {
     background: var(--foreground);
     color: var(--background);
-}
-
-h1,
-h2 {
-    text-shadow: 0 0 2px var(--foreground-lighter);
 }
 
 a {
@@ -126,10 +121,13 @@ input:-webkit-autofill:active {
         left: 16px;
         width: 100%;
         height: 100%;
-        background: radial-gradient(circle at center, var(--foreground) 0.6px, transparent 0) round;
+        background: radial-gradient(circle at center, var(--foreground) 0.7px, transparent 0);
+        background-repeat: round;
         background-size: 4px 4px;
         z-index: -1;
+        opacity: 0.7;
     }
+
 }
 
 .navbar {
