--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -9,10 +9,48 @@
     --foreground: #D9A065;
 }
 
-:root:has(body.pastel-light) {
+html[data-theme='pastel-light'] {
     --background: #F9F9F9;
     --foreground: #A7255F;
     --background-lighter: #EDABC8;
+}
+
+html[data-theme='solarized-dark'] {
+    --background: #283618;
+    --foreground: #fefae0;
+    --background-lighter: #606c38;
+}
+
+html[data-theme='solarized-light'] {
+    --background: #dad7cd;
+    --foreground: #344e41;
+    --background-lighter: #a3b18a;
+}
+
+html[data-theme='cyberpunk'] {
+    --background: #f9f002;
+    --foreground: #000000;
+    --background-lighter: #ff003c;
+}
+
+html[data-theme='comic-sans'] {
+    --background: linear-gradient(45deg, magenta, blue, cyan, green, yellow);
+    --foreground: black;
+    --background-lighter: lightgray;
+
+    body {
+        font-family: "Comic Sans MS", "Comic Sans", cursive;
+    }
+    a:hover {
+        color: white
+    }
+    button:hover {
+        color: white;
+    }
+    ::selection {
+        background: var(--foreground);
+        color: white;
+    }
 }
 
 *,
@@ -32,7 +70,7 @@ body {
 }
 
 html {
-    background-color: var(--background);
+    background: var(--background);
     padding-inline: 16px;
 }
 
@@ -117,8 +155,13 @@ input:-webkit-autofill:active {
     font-weight: 600;
     border: 1px solid;
     width: fit-content;
-    position: relative;
     background: var(--background);
+
+
+}
+
+.dotted-background, .section-title {
+    position: relative;
 
     &::after {
         content: '';
@@ -127,13 +170,11 @@ input:-webkit-autofill:active {
         left: 16px;
         width: 100%;
         height: 100%;
-        background: radial-gradient(circle at center, var(--foreground) 0.7px, transparent 0);
+        background: radial-gradient(circle at center, var(--background-lighter) 0.7px, transparent 0);
         background-repeat: round;
-        background-size: 4px 4px;
+        background-size: 2px 2px;
         z-index: -1;
-        opacity: 0.7;
     }
-
 }
 
 .navbar {
@@ -189,14 +230,17 @@ hr {
     border-collapse: collapse;
     table-layout: fixed;
     width: 100%;
+
     tr {
         border: 1px solid;
     }
+
     td {
         padding: 4px;
         width: 50%;
     }
-    td+td {
+
+    td + td {
         border-left: 1px solid;
     }
 
