--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,7 @@
 <head>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <script src="../scripts/utils.js"></script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/global.css">
@@ -68,6 +69,43 @@
        x-text="formatter.format(time)"
     ></p>
 </footer>
+
+<div id="contextmenu">
+    <div class="dotted-background list" role="list">
+        <p style="padding: 2px 4px 0 4px">Copying is disabled</p>
+        <hr>
+        <div role="listitem"><a href="/">Home</a></div>
+        <div role="listitem"><a href="/leaderboard">Leaderboard</a></div>
+        <hr>
+        <div role="listitem" class="expandable">
+            <p>Theme</p>
+            <div role="list" class="dotted-background">
+                <template x-for="availableTheme in availableThemes" :key="availableTheme">
+                    <button
+                            @click="
+                            theme = availableTheme;
+                            localStorage.setItem('theme', availableTheme);
+                            document.documentElement.setAttribute('data-theme', availableTheme);
+                        "
+                            x-text="availableTheme"
+                            style="width: 100%;text-align: left;white-space: nowrap"
+                    ></button>
+                </template>
+            </div>
+        </div>
+        <hr>
+        <div role="listitem">
+            <p @click="barrelRoll()">do a barrel roll</p>
+        </div>
+        <div role="listitem">
+            <a target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">rickroll</a>
+        </div>
+        <div role="listitem">
+            <a target="_blank" href="http://sallysbakingaddiction.com/easy-cinnamon-rolls-from-scratch/">cinnamon
+                roll</a>
+        </div>
+    </div>
+</div>
 
 </body>
 
